--- a/roles/cloud-azure/tasks/prompts.yml
+++ b/roles/cloud-azure/tasks/prompts.yml
@@ -1,19 +1,23 @@
 ---
-- set_fact:
+- name: Set facts
+  ansible.builtin.set_fact:
     secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET'), true) }}"
     tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT'), true) }}"
     client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID'), true) }}"
     subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID'), true) }}"
 
-- block:
+- name: Prompts
+  when: region is undefined
+  block:
     - name: Set the default region
-      set_fact:
+      ansible.builtin.set_fact:
         default_region: >-
           {% for r in azure_regions %}
           {%- if r['name'] == "eastus" %}{{ loop.index }}{% endif %}
           {%- endfor %}
 
-    - pause:
+    - name: Read region
+      ansible.builtin.pause:
         prompt: |
           What region should the server be located in?
             {% for r in azure_regions %}
@@ -23,4 +27,3 @@
           Enter the number of your desired region
           [{{ default_region }}]
       register: _algo_region
-  when: region is undefined
