--- a/roles/cloud-hetzner/tasks/prompts.yml
+++ b/roles/cloud-hetzner/tasks/prompts.yml
@@ -1,5 +1,6 @@
 ---
-- pause:
+- name: Read API token
+  ansible.builtin.pause:
     prompt: |
       Enter your API token (https://trailofbits.github.io/algo/cloud-hetzner.html#api-token):
     echo: false
@@ -9,26 +10,27 @@
     - lookup('env','HCLOUD_TOKEN')|length <= 0
 
 - name: Set the token as a fact
-  set_fact:
+  ansible.builtin.set_fact:
     algo_hcloud_token: "{{ hcloud_token | default(_hcloud_token.user_input|default(None)) | default(lookup('env','HCLOUD_TOKEN'), true) }}"
 
 - name: Get regions
-  hcloud_datacenter_facts:
+  hetzner.hcloud.hcloud_datacenter_info:
     api_token: "{{ algo_hcloud_token }}"
   register: _hcloud_regions
 
 - name: Set facts about the regions
-  set_fact:
+  ansible.builtin.set_fact:
     hcloud_regions: "{{ hcloud_datacenter_facts | sort(attribute='location') }}"
 
 - name: Set default region
-  set_fact:
+  ansible.builtin.set_fact:
     default_region: >-
       {% for r in hcloud_regions %}
       {%- if r['location'] == "nbg1" %}{{ loop.index }}{% endif %}
       {%- endfor %}
 
-- pause:
+- name: Read region
+  ansible.builtin.pause:
     prompt: |
       What region should the server be located in?
         {% for r in hcloud_regions %}
@@ -41,7 +43,7 @@
   when: region is undefined
 
 - name: Set additional facts
-  set_fact:
+  ansible.builtin.set_fact:
     algo_hcloud_region: >-
       {% if region is defined %}{{ region }}
       {%- elif _algo_region.user_input %}{{ hcloud_regions[_algo_region.user_input | int -1 ]['location'] }}
