--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -7,3 +7,6 @@ ipv6_default: "{{ ansible_default_ipv6.address + '/' + ansible_default_ipv6.pref
 ipv6_subnet_size: "{{ ipv6_default | ipaddr('size') }}"
 ipv6_egress_ip: >-
   {{ (ipv6_default | next_nth_usable(15 | random(seed=algo_server_name + ansible_fqdn))) + '/124' if ipv6_subnet_size|int > 1 else ipv6_default }}
+
+# as used in common role
+wireguard_port_avoid: 53
