--- a/cloud.yml
+++ b/cloud.yml
@@ -7,15 +7,16 @@
     - config.cfg
 
   tasks:
-    - block:
+    - name: Play cloud
+      block:
         - name: Local pre-tasks
-          import_tasks: playbooks/cloud-pre.yml
+          ansible.builtin.import_tasks: tasks/cloud-pre.yml
 
         - name: Include a provisioning role
-          include_role:
+          ansible.builtin.include_role:
             name: "{{ 'local' if algo_provider == 'local' else 'cloud-' + algo_provider }}"
 
         - name: Local post-tasks
-          import_tasks: playbooks/cloud-post.yml
+          ansible.builtin.import_tasks: tasks/cloud-post.yml
       rescue:
-        - include_tasks: playbooks/rescue.yml
+        - ansible.builtin.include_tasks: tasks/rescue.yml
