--- a/input.yml
+++ b/input.yml
@@ -27,9 +27,10 @@
     - config.cfg
 
   tasks:
-    - block:
+    - name: Inputs
+      block:
         - name: Cloud prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               What provider would you like to use?
                 {% for p in providers_map %}
@@ -41,11 +42,11 @@
           when: provider is undefined
 
         - name: Set facts based on the input
-          set_fact:
+          ansible.builtin.set_fact:
             algo_provider: "{{ provider | default(providers_map[_algo_provider.user_input|default(omit)|int - 1]['alias']) }}"
 
         - name: VPN server name prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Name the vpn server
               [algo]
@@ -55,7 +56,7 @@
             - algo_provider != "local"
 
         - name: Cellular On Demand prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Do you want macOS/iOS clients to enable "Connect On Demand" when connected to cellular networks?
               [y/N]
@@ -63,7 +64,7 @@
           when: ondemand_cellular is undefined
 
         - name: Wi-Fi On Demand prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Do you want macOS/iOS clients to enable "Connect On Demand" when connected to Wi-Fi?
               [y/N]
@@ -71,7 +72,7 @@
           when: ondemand_wifi is undefined
 
         - name: Trusted Wi-Fi networks prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               List the names of any trusted Wi-Fi networks where macOS/iOS clients should not use "Connect On Demand"
               (e.g., your home network. Comma-separated value, e.g., HomeNet,OfficeWifi,AlgoWiFi)
@@ -81,7 +82,7 @@
             - (ondemand_wifi|default(false)|bool) or (booleans_map[_ondemand_wifi.user_input|default(omit)]|default(false))
 
         - name: Retain the PKI prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Do you want to retain the keys (PKI)? (required to add users in the future, but less secure)
               [y/N]
@@ -91,7 +92,7 @@
             - ipsec_enabled
 
         - name: DNS adblocking prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Do you want to enable DNS ad blocking on this VPN server?
               [y/N]
@@ -99,7 +100,7 @@
           when: dns_adblocking is undefined
 
         - name: SSH tunneling prompt
-          pause:
+          ansible.builtin.pause:
             prompt: |
               Do you want each user to have their own account for SSH tunneling?
               [y/N]
@@ -107,7 +108,7 @@
           when: ssh_tunneling is undefined
 
         - name: Set facts based on the input
-          set_fact:
+          ansible.builtin.set_fact:
             algo_server_name: >-
               {% if server_name is defined %}{% set _server = server_name %}
               {%- elif _algo_server_name.user_input is defined and _algo_server_name.user_input|length > 0 -%}
@@ -140,4 +141,4 @@
               {%- elif _store_pki.user_input is defined  %}{{ booleans_map[_store_pki.user_input] | default(defaults['store_pki']) }}
               {%- else %}false{% endif %}{% endif %}
       rescue:
-        - include_tasks: playbooks/rescue.yml
+        - ansible.builtin.include_tasks: playbooks/rescue.yml
