--- a/main.yml
+++ b/main.yml
@@ -3,26 +3,27 @@
   become: false
   tasks:
     - name: Playbook dir stat
-      stat:
+      ansible.builtin.stat:
         path: "{{ playbook_dir }}"
       register: _playbook_dir
 
     - name: Ensure Ansible is not being run in a world writable directory
-      assert:
+      ansible.builtin.assert:
         that: _playbook_dir.stat.mode|int <= 775
         msg: >
           Ansible is being run in a world writable directory ({{ playbook_dir }}), ignoring it as an ansible.cfg source.
           For more information see https://docs.ansible.com/ansible/devel/reference_appendices/config.html#cfg-in-world-writable-dir
 
     - name: Ensure the requirements installed
-      debug:
+      ansible.builtin.debug:
         msg: "{{ '' | ipaddr }}"
       ignore_errors: true
       no_log: true
       register: ipaddr
 
+    # FIXME! failing if another matching pattern in requirements.txt aka ansible-lint
     - name: Set required ansible version as a fact
-      set_fact:
+      ansible.builtin.set_fact:
         required_ansible_version: "{{ item |  regex_replace('^ansible[\\s+]?(?P<op>[=,>,<]+)[\\s+]?(?P<ver>\\d.\\d+(.\\d+)?)$', '{\"op\": \"\\g<op>\",\"ver\"\
           : \"\\g<ver>\" }') }}"
       when: '"ansible" in item'
@@ -33,7 +34,7 @@
       register: pip_package_info
 
     - name: Verify Python meets Algo VPN requirements
-      assert:
+      ansible.builtin.assert:
         that: (ansible_python.version.major|string + '.' + ansible_python.version.minor|string) is version('3.8', '>=')
         msg: >
           Python version is not supported.
@@ -41,7 +42,7 @@
           See for more details - https://trailofbits.github.io/algo/troubleshooting.html#python-version-is-not-supported
 
     - name: Verify Ansible meets Algo VPN requirements
-      assert:
+      ansible.builtin.assert:
         that:
           - pip_package_info.packages.pip.ansible.0.version is version(required_ansible_version.ver, required_ansible_version.op)
           - not ipaddr.failed
