--- a/roles/cloud-lightsail/tasks/main.yml
+++ b/roles/cloud-lightsail/tasks/main.yml
@@ -1,14 +1,15 @@
 ---
 - name: Build python virtual environment
-  import_tasks: venv.yml
+  ansible.builtin.import_tasks: venv.yml
 
 - name: Include prompts
-  import_tasks: prompts.yml
+  ansible.builtin.import_tasks: prompts.yml
 
 - name: Deploy the stack
-  import_tasks: cloudformation.yml
+  ansible.builtin.import_tasks: cloudformation.yml
 
-- set_fact:
+- name: Set facts
+  ansible.builtin.set_fact:
     cloud_instance_ip: "{{ stack.stack_outputs.IpAddress }}"
     ansible_ssh_user: algo
     ansible_ssh_port: "{{ ssh_port }}"
