--- a/roles/cloud-lightsail/tasks/prompts.yml
+++ b/roles/cloud-lightsail/tasks/prompts.yml
@@ -1,5 +1,6 @@
 ---
-- pause:
+- name: Read access key
+  ansible.builtin.pause:
     prompt: |
       Enter your aws_access_key (http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html)
       Note: Make sure to use an IAM user with an acceptable policy attached (see https://github.com/trailofbits/algo/blob/master/docs/deploy-from-ansible.md)
@@ -9,7 +10,8 @@
     - aws_access_key is undefined
     - lookup('env','AWS_ACCESS_KEY_ID')|length <= 0
 
-- pause:
+- name: Read secret key
+  ansible.builtin.pause:
     prompt: |
       Enter your aws_secret_key (http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html)
     echo: false
@@ -18,30 +20,34 @@
     - aws_secret_key is undefined
     - lookup('env','AWS_SECRET_ACCESS_KEY')|length <= 0
 
-- set_fact:
+- name: Set facts
+  ansible.builtin.set_fact:
     access_key: "{{ aws_access_key | default(_aws_access_key.user_input|default(None)) | default(lookup('env','AWS_ACCESS_KEY_ID'), true) }}"
     secret_key: "{{ aws_secret_key | default(_aws_secret_key.user_input|default(None)) | default(lookup('env','AWS_SECRET_ACCESS_KEY'), true) }}"
 
-- block:
+- name: region undefined
+  when: region is undefined
+  block:
     - name: Get regions
-      lightsail_region_facts:
+      community.aws.aws_region_info:
         aws_access_key: "{{ access_key }}"
         aws_secret_key: "{{ secret_key }}"
         region: us-east-1
       register: _lightsail_regions
 
     - name: Set facts about the regions
-      set_fact:
+      ansible.builtin.set_fact:
         lightsail_regions: "{{ _lightsail_regions.data.regions | sort(attribute='name') }}"
 
     - name: Set the default region
-      set_fact:
+      ansible.builtin.set_fact:
         default_region: >-
           {% for r in lightsail_regions %}
           {%- if r['name'] == "us-east-1" %}{{ loop.index }}{% endif %}
           {%- endfor %}
 
-    - pause:
+    - name: Read region
+      ansible.builtin.pause:
         prompt: |
           What region should the server be located in?
           (https://aws.amazon.com/about-aws/global-infrastructure/regional-product-services/)
@@ -52,9 +58,9 @@
           Enter the number of your desired region
           [{{ default_region }}]
       register: _algo_region
-  when: region is undefined
 
-- set_fact:
+- name: Set facts
+  ansible.builtin.set_fact:
     stack_name: "{{ algo_server_name | replace('.', '-') }}"
     algo_region: >-
       {% if region is defined %}{{ region }}
