--- a/roles/cloud-vultr/tasks/main.yml
+++ b/roles/cloud-vultr/tasks/main.yml
@@ -1,14 +1,17 @@
 ---
 - name: Include prompts
-  import_tasks: prompts.yml
+  ansible.builtin.import_tasks: prompts.yml
 
-- block:
+- name: Vultr setup
+  environment:
+    VULTR_API_CONFIG: "{{ algo_vultr_config }}"
+  block:
     - name: Creating a firewall group
-      vultr_firewall_group:
+      vultr.cloud.firewall_group:
         name: "{{ algo_server_name }}"
 
     - name: Creating firewall rules
-      vultr_firewall_rule:
+      vultr.cloud.firewall_rule:
         group: "{{ algo_server_name }}"
         protocol: "{{ item.protocol }}"
         port: "{{ item.port }}"
@@ -25,13 +28,13 @@
         - { protocol: udp, port: "{{ wireguard_port }}", ip: v6, cidr: "::/0" }
 
     - name: Upload the startup script
-      vultr_startup_script:
+      vultr.cloud.startup_script:
         name: algo-startup
         script: |
           {{ lookup('template', 'files/cloud-init/base.yml') }}
 
     - name: Creating a server
-      vultr_server:
+      vultr.cloud.vpc:
         name: "{{ algo_server_name }}"
         startup_script: algo-startup
         hostname: "{{ algo_server_name }}"
@@ -46,11 +49,9 @@
         notify_activate: false
       register: vultr_server
 
-    - set_fact:
+    - name: Set fact vultr
+      ansible.builtin.set_fact:
         cloud_instance_ip: "{{ vultr_server.vultr_server.v4_main_ip }}"
         ansible_ssh_user: algo
         ansible_ssh_port: "{{ ssh_port }}"
         cloudinit: true
-
-  environment:
-    VULTR_API_CONFIG: "{{ algo_vultr_config }}"
